# erc20_payment_lib

./: .dockerignore  .gitignore  .test.env  Cargo.toml  Dockerfile  LICENSE  README.md  config-payments-local.toml  config-payments-test.toml  config-payments.toml  test_allowance.sh
contracts/: eip712.json  lock_payments.json  meta_transaction.json
crates/erc20_payment_lib/: Cargo.toml  config-payments.toml
crates/erc20_payment_lib/contracts/: distributor.json  lock_payments.json  multi_transfer_erc20.json
crates/erc20_payment_lib/migrations/: 20221026000000_init.sql  20230819000000_paid_date.sql  20230820000000_replaced.sql  20231017000000_chain_tx.sql  20231019000000_scan.sql  20231023000000_chain.sql  20231102000000_init.sql  20231103000000_init.sql
crates/erc20_payment_lib/src/: account_balance.rs  config.rs  contracts.rs  eth.rs  faucet_client.rs  lib.rs  misc.rs  multi.rs  rpc_pool.rs  runtime.rs  sender.rs  server.rs  service.rs  setup.rs  signer.rs  transaction.rs  utils.rs  ws.rs
crates/erc20_payment_lib/src/db/: connection.rs  mod.rs  model.rs  ops.rs
crates/erc20_payment_lib/src/db/model/: chain_transfer_dao.rs  chain_tx_dao.rs  scan_dao.rs  token_transfer_dao.rs  transfer_in_dao.rs  tx_dao.rs
crates/erc20_payment_lib/src/db/ops/: allowance_ops.rs  chain_transfer_ops.rs  chain_tx_ops.rs  scan_ops.rs  token_transfer_ops.rs  transfer_in_ops.rs  tx_ops.rs
crates/erc20_payment_lib/src/error/: bag.rs  macros.rs  wrapped.rs
crates/erc20_payment_lib/src/sender/: allowance.rs  batching.rs  mod.rs  process.rs  service.rs
crates/erc20_payment_lib/src/server/: mod.rs  web.rs  ws.rs
crates/erc20_payment_lib/src/signer/: account.rs  external.rs  private.rs
crates/erc20_payment_lib_common/: Cargo.toml
crates/erc20_payment_lib_common/migrations/: 20240118000000_add_allocation_id.sql  20240301000000_deposit_id.sql  20240312000000_add_finish.sql  20240320000000_add_idx.sql  20240320000001_add_idx.sql
crates/erc20_payment_lib_common/src/: events.rs  lib.rs  metrics.rs  utils.rs
crates/erc20_payment_lib_common/src/channels/: broadcast.rs  mod.rs
crates/erc20_payment_lib_common/src/db/: mod.rs  ops.rs
crates/erc20_payment_lib_common/src/db/model/: allowance_dao.rs  chain_transfer_dao.rs  chain_tx_dao.rs  mod.rs  scan_dao.rs  token_transfer_dao.rs  transfer_in_dao.rs  tx_dao.rs
crates/erc20_payment_lib_common/src/db/ops/: allowance_ops.rs  chain_transfer_ops.rs  chain_tx_ops.rs  scan_ops.rs  token_transfer_ops.rs  transfer_in_ops.rs  tx_ops.rs
crates/erc20_payment_lib_common/src/error/: allowance.rs  custom.rs  macros.rs  mod.rs
crates/erc20_payment_lib_extra/: Cargo.toml
crates/erc20_payment_lib_extra/src/: account_balance.rs  generate_transactions.rs  lib.rs
crates/erc20_payment_lib_test/: Cargo.toml
crates/erc20_payment_lib_test/src/: accounts.rs  blockchain_setup.rs  config_setup.rs  durabily2.rs  get_balance.rs  lib.rs  multi_erc20_transfer.rs  multi_test_helper.rs  multi_test_one_docker_helper.rs  one_docker_per_test_helper.rs  setup.rs
crates/erc20_rpc_pool/: Cargo.toml
crates/erc20_rpc_pool/src/: lib.rs  rpc_pool.rs
crates/erc20_rpc_pool/src/rpc_pool/: balance.txt  eth_balance.rs  eth_balance2.rs  eth_block.rs  eth_block_number.rs  eth_call.rs  eth_estimate_gas.rs  eth_generic_call.rs  eth_logs.rs  eth_send_raw_transaction.rs  eth_transaction.rs  eth_transaction_count.rs  eth_transaction_receipt.rs  external.rs  gen_methods.py  mod.rs  pool.rs  utils.rs  verify.rs  web3_error_list.rs
crates/erc20_rpc_pool/src/rpc_pool/pool/: resolver.rs  verifier.rs
crates/erc20_rpc_pool/src/rpc_pool/verify/: mod.rs  verify_impl.rs  verify_info.rs
crates/web3_test_proxy/: Cargo.toml  Dockerfile  README.md  archive_history.py  package-lock.json  problems_plan.json
crates/web3_test_proxy/frontend/: .eslintignore  .eslintrc.js  .gitignore  .gitignore.bak  .prettierignore  .prettierrc.js  LICENSE  README.md  index.html  vite-env.d.ts  vite.config.ts
crates/web3_test_proxy/frontend/frontend/: index.html
crates/web3_test_proxy/frontend/frontend/assets/: @babel-85587bd4.js  @babel-90fae8f7.js  base16-823cae66.js  color-8be6040b.js  color-string-327061cf.js  color-string-80575a37.js  index-06dedef8.js  index-146731fa.js  index-33af7c74.js  index-99695eec.css  is-arrayish-4445f582.js  lodash.curry-9cd0b063.js  luxon-4a3d1a6a.js  luxon-91c18b66.js  react-077fff36.js  react-base16-styling-9e0156d9.js  react-c2eccb4a.js  react-confirm-box-2b8c3243.js  react-dom-a94e3221.js  react-dom-ae9f5c52.js  react-json-tree-3bb10570.js  react-json-tree-59dcb848.js  react-router-89dba378.js  react-router-cec35629.js  react-router-dom-7943c7e0.js  react-router-dom-aacee83d.js  react-tabs-477a8c2a.css  react-tabs-701526c6.js  react-tabs-866748e4.js  simple-swizzle-43abd917.js  simple-swizzle-d8bc59f1.js
crates/web3_test_proxy/frontend/src/: BackendSettingsPage.css  BackendSettingsPage.tsx  BackendSettingsProvider.tsx  ConfigProvider.tsx  Dashboard.tsx  Endpoints.css  Endpoints.tsx  LatestCalls.tsx  Monitor.css  Monitor.tsx  SingleCallInfo.css  SingleCallInfo.tsx  WelcomePage.css  WelcomePage.tsx  main.tsx
crates/web3_test_proxy/frontend/src/common/: BackendConfig.ts  BackendSettings.ts
crates/web3_test_proxy/src/: frontend.rs  main.rs  plan.rs  problems.rs
crates/web3_test_proxy/src/error/: bag.rs  macros.rs  mod.rs
crates/web3_test_proxy_client/: Cargo.toml
crates/web3_test_proxy_client/src/: lib.rs  list_txs.rs
crates/ya_web3_proxy/: Cargo.toml
crates/ya_web3_proxy/frontend/: package.json
crates/ya_web3_proxy/frontend/frontend/: index.html
crates/ya_web3_proxy/frontend/frontend/assets/: color-308a626c.js  lodash.curry-920c78a7.js  react-base16-styling-9aa39d3a.js  react-confirm-box-9fe3216c.js
crates/ya_web3_proxy/frontend/src/: DateBox.tsx  LatestCalls.css  index.css
crates/ya_web3_proxy/frontend/src/common/: BackendCall.ts
crates/ya_web3_proxy/src/error/: wrapped.rs
docs/: tests.md
endpoints/: holesky.json  holesky.txt
examples/: generate_transfers.rs  import_tx.rs  scan_balance.rs  test_forever.rs  test_sqlx.rs
sessions/: .env  (+3 more)
(+224 files in other folders)
