[workspace]
members = [
    "crates/erc20_payment_lib",
    "crates/erc20_payment_lib_extra",
    "crates/erc20_payment_lib_test",
    "crates/web3_test_proxy_client",
]

[[bin]]
name = "erc20_processor"
path = "src/main.rs"

[workspace.package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.1.9"
edition = "2021"
license = "MIT"

[package]
name = "erc20_processor"
description = "Payment processor for ERC20 tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "^4.2.1", default-features = false, features = ["macros"] }
anyhow = "1.0.71"
async-trait = "0.1.68"
awc = "3.1.1"
base64 = "0.21.2"
bollard = "0.14.0"
chrono = "0.4.22"
csv = "1.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
eth-keystore = "=0.5.0"
fastrand = "2.0.0"
futures = "0.3.17"
futures-util = "0.3.28"
hex = "0.4.3"
humantime = "2.1"
lazy_static = "1.4.0"
log = "0.4.17"
mime_guess = "2.0.3"
rand = "0.8.5"
rust-embed = "6.8.1"
rust_decimal = { version = "1.26.1", features = ["serde-arbitrary-precision"] }
rustc-hex = "2.1.0"
secp256k1 = "0.21.0" # version has to match web3
serde = "^1.0.147"
serde_json = { version = "^1.0.85" }
sha3 = "0.10.6"
# newest version that can be used by yagna without diesel update
sqlx = { version = "=0.5.9", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
sqlx-core = { version = "=0.5.9", features = ["runtime-tokio-rustls"] }
# newest version that compiles
#sqlx-core = { version = "0.6", default-features=false, features = ["runtime-tokio-rustls"] }
#sqlx = { version = "0.6", default-features=false, features = ["migrate", "macros", "sqlite", "runtime-tokio-rustls", "chrono"] }
#libsqlite3-sys = { version = "=0.22.2", features = ["bundled"] }
stream-rate-limiter = "0.3"
structopt = "0.3.26"
thiserror = "1.0.37"
tokio = { version = "^1.21", features = ["macros"] }
toml = "0.5.9"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
web3 = { version = "0.18.0", default-features = false, features = ["signing", "http-rustls-tls"] }



[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
uuid = { workspace = true }
sqlx-core = { workspace = true }
sqlx = { workspace = true }
csv = { workspace = true }
eth-keystore = { workspace = true }
stream-rate-limiter = { workspace = true }
fastrand = { workspace = true }

erc20_payment_lib = { path = "crates/erc20_payment_lib" }
erc20_payment_lib_extra = { path = "crates/erc20_payment_lib_extra" }

[dev-dependencies]
bollard = { workspace = true}
erc20_payment_lib_test = { path = "crates/erc20_payment_lib_test" }
web3_test_proxy_client = { path = "crates/web3_test_proxy_client" }
awc = { workspace = true }
test-case = "3.1.0"

[profile.release-fast]
inherits = "release"
incremental = false
opt-level = 1
panic = "unwind"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
