[workspace]
members = [
    "crates/erc20_payment_lib",
    "crates/erc20_payment_lib_extra",
    "crates/erc20_payment_lib_test",
    "crates/web3_test_proxy_client",
    "crates/web3_test_proxy"
]

[[bin]]
name = "erc20_processor"
path = "src/main.rs"

[package]
name = "erc20_processor"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.8"
edition = "2021"
license = "MIT"

[workspace.dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "^4.2.1", default-features = false, features = [
    "macros",
] }
anyhow = "1.0.71"
async-trait = "0.1.68"
awc = "3.1.1"
base64 = "0.21.2"
bollard = "0.14.0"
chrono = { version = "0.4.22", features = ["serde"] }
csv = "1.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
eth-keystore = "=0.5.0"
fastrand = "2.0.0"
futures = "0.3.17"
futures-util = "0.3.28"
hex = "0.4.3"
humantime = "2.1"
itertools = "0.11"
lazy_static = "1.4.0"
log = "0.4.17"
mime_guess = "2.0.3"
rand = "0.8.5"
rust-embed = "6.8.1"
rust_decimal = "1.26.1"
rustc-hex = "2.1.0"
secp256k1 = "0.27.0" # version has to match web3
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.85" }
sha3 = "0.10.6"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "runtime-tokio"] }
stream-rate-limiter = "0.3"
structopt = "0.3.26"
thiserror = "1.0.37"
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9" # need some refactor to update
uuid = { version = "1.2.2", features = ["serde", "v4"] }
web3 = { version = "0.19.0", default-features = false, features = [
    "signing",
    "http-rustls-tls",
] }
trust-dns-resolver = "0.22"
url = "2.4.1"
regex = "1.10.2"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
csv = { workspace = true }
eth-keystore = { workspace = true }
stream-rate-limiter = { workspace = true }
fastrand = { workspace = true }
trust-dns-resolver = { workspace = true }
url = { workspace = true }
regex = { workspace = true }

erc20_payment_lib = { path = "crates/erc20_payment_lib", version = "0.3.0" }
erc20_payment_lib_extra = { path = "crates/erc20_payment_lib_extra", version = "0.3.0" }

[dev-dependencies]
bollard = { workspace = true }
erc20_payment_lib_test = { path = "crates/erc20_payment_lib_test" }
web3_test_proxy_client = { path = "crates/web3_test_proxy_client" }
awc = { workspace = true }
# please do not use this library. It is not developer friendly
# if you have very good reason then ask first
#test-case = "3.1.0"

[profile.release-fast]
inherits = "release"
incremental = false
opt-level = 1
panic = "unwind"

[profile.release-lto]
inherits = "release"
incremental = false
opt-level = 1
panic = "unwind"

#[profile.release-lto]
#inherits = "release"
#codegen-units = 1
#lto = "fat"
#opt-level = 3
#panic = "abort"
