[package]
name = "erc20_payment_lib"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.16"
edition = "2021"
license = "MIT"

[dependencies]
actix-files = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
structopt = { workspace = true }
thunderdome = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
trust-dns-resolver = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
web3 = { workspace = true }
erc20_rpc_pool = { path = "../erc20_rpc_pool", version = "0.3.7" }
erc20_payment_lib_common = { path = "../erc20_payment_lib_common", version = "0.3.7" }

