[package]
name = "erc20_payment_lib_common"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.7"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
awc = { workspace = true }
trust-dns-resolver = { workspace = true }
thunderdome = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
