[package]
name = "erc20_payment_lib_common"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.14"
edition = "2021"
license = "MIT"

[dependencies]
actix = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
awc = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
metrics-core = { workspace = true }
metrics-runtime = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
structopt = { workspace = true }
thunderdome = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
trust-dns-resolver = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
web3 = { workspace = true }
