[package]
name = "erc20_payment_lib_extra"
description = "Payment processor for ERC20 tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
stream-rate-limiter = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
csv = { workspace = true }
sqlx-core = { workspace = true }

sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

erc20_payment_lib = { path = "../../crates/erc20_payment_lib" }