[package]
name = "erc20_payment_lib_extra"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.13"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
stream-rate-limiter = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
csv = { workspace = true }
sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

erc20_payment_lib = { path = "../erc20_payment_lib", version = "0.3.7" }
erc20_rpc_pool = { path = "../erc20_rpc_pool", version = "0.3.7" }
