[package]
name = "erc20_payment_lib_test"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
env_logger = { workspace = true }
erc20_payment_lib = { path = "../erc20_payment_lib" }
erc20_payment_lib_extra = { path = "../erc20_payment_lib_extra" }
web3_test_proxy_client = { path = "../web3_test_proxy_client" }
