[package]
name = "erc20_rpc_pool"
description = "Rpc pool for web3 library"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.12"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
awc = { workspace = true }
bollard = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
serde_json = { workspace = true }
thunderdome = { workspace = true }
uuid = { workspace = true }
env_logger = { workspace = true }
reqwest = "0.11.22"
erc20_payment_lib_common = { path = "../erc20_payment_lib_common", version = "0.3.7" }
