[package]
name = "erc20_rpc_pool"
description = "Rpc pool for web3 library"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.3.24"
edition = "2021"
license = "MIT"

[dependencies]
actix-files = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
awc = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
structopt = { workspace = true }
thunderdome = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
trust-dns-resolver = { workspace = true }
uuid = { workspace = true }
web3 = { workspace = true }
erc20_payment_lib_common = { path = "../erc20_payment_lib_common", version = "0.3.20" }
parking_lot = "0.12.1"
