[package]
name = "erc20_rpc_pool"
description = "Rpc pool for web3 library"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-files = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
awc = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
structopt = { workspace = true }
thunderdome = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
trust-dns-resolver = { workspace = true }
uuid = { workspace = true }
web3 = { workspace = true }
# local dependencies
erc20_payment_lib_common = { workspace = true }
