[package]
name = "web3_test_proxy"
description = "Simple proxy for web3 for listing latest web3 traffic"
version = "0.3.25"
edition = "2021"
license = "MIT"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]

[[bin]]
name = "web3_test_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
