[package]
name = "web3_test_proxy_client"
version = "0.3.25"
description = "Proxy for web3 test proxy"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
awc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
web3 = { workspace = true }
erc20_payment_lib = { path = "../erc20_payment_lib", version = "0.3.20" }
erc20_payment_lib_common = { path = "../erc20_payment_lib_common", version = "0.3.20" }
