[package]
name = "web3_test_proxy_client"
version = "0.4.1"
description = "Proxy for web3 test proxy"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
awc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
web3 = { workspace = true }
# local dependencies
erc20_payment_lib = { workspace = true }
erc20_payment_lib_common = { workspace = true }
