[package]
name = "ya_web3_proxy"
description = "Simple proxy for web3 for listing latest web3 traffic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ya_web3_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }